Fade in exploding scene on page load to avoid seeing flickering due to elements moving around for the mobile layout.

--- a/src/packages/modules/exploded-view-b2-x00/css/exploded-view-b2-x00.scss
+++ b/src/packages/modules/exploded-view-b2-x00/css/exploded-view-b2-x00.scss
@@ -36,8 +36,13 @@ $pieceTeaseStep: 0.4%;
     text-align: center;
   }
 
-  .container {
-    //max-width: $bgMaxWidth;
+  .csstransitions & .scene {
+    opacity: 0;
+    @include transition( opacity $transitionFast $easeNormal );
+
+    &.in {
+      opacity: 1;
+    }
   }
 
   .submodule > .image-module {
